# blocify

./: Cargo.toml  LICENSE  README.md  createMVCController.js  createMVCFolders.js  createMVCRoutes.js  generateArchitecture.js  index.js  package-lock.json  package.json
routes/: user.route.js
src/: cli.rs  main.rs
src/controllers/: user.controller.js
src/generator/: microfrontend.rs  mod.rs
